--- a/plugin/provenance/Makefile
+++ b/plugin/provenance/Makefile
@@ -1,23 +1,8 @@
-.SUFFIXES:
-.SUFFIXES: .c .o
-CLNT = file_create
-SRVR = file_create_svc
-CFLAGS = -g -Wall
-
-SRVR_OBJ = hdf5creat_svc_proc.o hdf5creat_svc.o
-CLNT_OBJ = hdf5creat.o  hdf5creat_clnt.o
-
-.c.o:; gcc -c -o $@ $(CFLAGS) $<
-
-default: $(CLNT) $(SRVR)
-
-$(CLNT): $(CLNT_OBJ) hdf5creat.h
-	gcc -o $(CLNT) $(CLNT_OBJ)
-
-$(SRVR): $(SRVR_OBJ) hdf5creat.h
-	/usr/local/hdf5/bin/h5cc -o $(SRVR) $(SRVR_OBJ)
-
-clean:
-	rm *.o $(CLNT) $(SRVR)
-	rm -i *~
-	rm core
+CC=mpicc
+HDF5_DIR=../hdf5/
+CFLAGS=-I$(HDF5_DIR)/include -L$(HDF5_DIR)/lib
+LIBS=-lhdf5
+TARGET=libh5prov.so
+makeso:
+	$(CC) -shared $(CFLAGS) $(LIBS) -o $(TARGET) -fPIC H5VLprovnc.c
+#mpicc -shared -I../hdf5/include -L../hdf5/lib -lhdf5 -o $(TARGET) -fPIC H5VLprovnc.c
